# hyperliquid-operator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SKILL.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
app/: __init__.py  config.py  database.py  main.py  models.py
app/cli/: __init__.py  bot_cmd.py  config_cmd.py  health.py  history.py  output.py  positions_balance.py  serve.py  status.py  strategy.py  trade.py
app/core/: __init__.py  bot.py  exchange.py  execution.py  position.py  risk.py
app/routes/: __init__.py  health.py  trading.py
app/strategies/: __init__.py  base.py  sma.py
docs/: hyperliquid-operator-prd.md
tests/: __init__.py  test_risk.py  test_strategy.py
