[project]
name = "hyperliquid-operator"
version = "0.1.0"
description = "Lean trading agent for Hyperliquid DEX — by Algo Traders Club"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "typer>=0.24.0",
    "pydantic-settings>=2.6.0",
    "ccxt>=4.4.0",
    "aiosqlite>=0.20.0",
    "coincurve>=20.0.0",
    "orjson>=3.10.0",
    "rich>=13.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling>=0.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[project.scripts]
hl-op = "app.cli:main"
